added html structure

--- a/index.html
+++ b/index.html
@@ -8,80 +8,156 @@
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Social Media Dashboard
-  Total Followers: 23,004
-
-  Dark Mode
-
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
-
-
-  Overview - Today
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <header>
+      <div class="nameContainer">
+        <h1>Social Media Dashboard</h1>
+        <p>Total Followers: 23,004</p>
+      </div>
+      <div class="darkMode">
+        <p>Dark Mode</p>
+        <input type="checkbox">
+      </div>
+    </header>
+    <section>
+      <div class="followers">
+        <div class="socialMedia">
+          <p>@nathanf</p>
+          <div class="number">
+            <span>1987</span>
+            <p>Followers</p>
+          </div>
+          <p>12 Today</p>
+        </div>
+        <div class="socialMedia">
+          <p>@nathanf</p>
+          <div class="number">
+            <span>1044</span>
+            <p>Followers</p>
+          </div>
+          <p>99 Today</p>
+        </div>
+        <div class="socialMedia">
+          <p>@nathanf</p>
+          <div class="number">
+            <span>11k</span>
+            <p>Followers</p>
+          </div>
+          <p>1099 Today</p>
+        </div>
+        <div class="socialMedia">
+          <p>Nathan F.</p>
+          <div class="number">
+            <span>8239</span>
+            <p>Subscribers</p>
+          </div>
+          <p>144 Today</p>
+        </div>
+      </div>
+      <div class="overview">
+        <h1>Overview - Today</h1>
+        <div class="overviewToday">
+          <div class="stat">
+            <div class="pageViews">
+              <p>Page Views</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                87
+              </span>
+              <p><span class="positive"></span>3%</p>
+            </div>
+          </div>
+          <div class="stat">
+            <div class="pageViews">
+              <p>Likes</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                52
+              </span>
+              <p><span class="negative"></span>2%</p>
+            </div>
+          </div>
+          <div class="stat">
+            <div class="pageViews">
+              <p>Likes</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                5462
+              </span>
+              <p><span class="positive"></span>2257%</p>
+            </div>
+          </div>
+          <div class="stat">
+            <div class="pageViews">
+              <p>Profile Views</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                52k
+              </span>
+              <p><span class="positive"></span>1375%</p>
+            </div>
+          </div>
+          <div class="stat">
+            <div class="pageViews">
+              <p>Retweets</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                117
+              </span>
+              <p><span class="positive"></span>303%</p>
+            </div>
+          </div>
+          <div class="stat">
+            <div class="pageViews">
+              <p>Likes</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                507
+              </span>
+              <p><span class="positive"></span>553%</p>
+            </div>
+          </div>
+          <div class="stat">
+            <div class="pageViews">
+              <p>Likes</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                107
+              </span>
+              <p><span class="negative"></span>19%</p>
+            </div>
+          </div>
+          <div class="stat">
+            <div class="pageViews">
+              <p>Total Views</p>
+              <span>icon</span>
+            </div>
+            <div class="percentage">
+              <span class="number">
+                1407
+              </span>
+              <p><span class="negative"></span>12%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </body>
 </html>
