added styling for media cards

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
 </head>
@@ -23,37 +23,37 @@
     </header>
     <section>
       <div class="followers">
-        <div class="socialMedia">
-          <p>@nathanf</p>
+        <div class="socialMedia facebook">
+          <p class="socialName"><img src="./images/icon-facebook.svg" alt=""> @nathanf</p>
           <div class="number">
             <span>1987</span>
-            <p>Followers</p>
+            <p>FOLLOWERS</p>
           </div>
-          <p>12 Today</p>
+          <p class="positive"><img src="./images/icon-up.svg" alt=""> 12 Today</p>
         </div>
-        <div class="socialMedia">
-          <p>@nathanf</p>
+        <div class="socialMedia twitter">
+          <p class="socialName"><img src="./images/icon-twitter.svg" alt=""> @nathanf</p>
           <div class="number">
             <span>1044</span>
-            <p>Followers</p>
+            <p>FOLLOWERS</p>
           </div>
-          <p>99 Today</p>
+          <p class="positive"><img src="./images/icon-up.svg" alt=""> 99 Today</p>
         </div>
-        <div class="socialMedia">
-          <p>@nathanf</p>
+        <div class="socialMedia instagram">
+          <p class="socialName"><img src="./images/icon-instagram.svg" alt=""> @nathanf</p>
           <div class="number">
             <span>11k</span>
-            <p>Followers</p>
+            <p >FOLLOWERS</p>
           </div>
-          <p>1099 Today</p>
+          <p class="positive"><img src="./images/icon-up.svg" alt=""> 1099 Today</p>
         </div>
-        <div class="socialMedia">
-          <p>Nathan F.</p>
+        <div class="socialMedia youtube">
+          <p class="socialName"><img src="./images/icon-youtube.svg" alt=""> Nathan F.</p>
           <div class="number">
             <span>8239</span>
-            <p>Subscribers</p>
+            <p>SUBSCRIBERS</p>
           </div>
-          <p>144 Today</p>
+          <p class="negative"><img src="./images/icon-down.svg" alt=""> 144 Today</p>
         </div>
       </div>
       <div class="overview">
@@ -159,5 +159,7 @@
       </div>
     </section>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
