finished styling for light theme

--- a/index.html
+++ b/index.html
@@ -62,97 +62,97 @@
           <div class="stat">
             <div class="pageViews">
               <p>Page Views</p>
-              <span>icon</span>
+              <span><img src="./images/icon-facebook.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
                 87
               </span>
-              <p><span class="positive"></span>3%</p>
+              <p><span class="positive"><img src="./images/icon-up.svg" alt=""> 3%</span></p>
             </div>
           </div>
           <div class="stat">
             <div class="pageViews">
               <p>Likes</p>
-              <span>icon</span>
+              <span><img src="./images/icon-facebook.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
                 52
               </span>
-              <p><span class="negative"></span>2%</p>
+              <p><span class="negative"><img src="./images/icon-down.svg" alt="">2%</span></p>
             </div>
           </div>
           <div class="stat">
             <div class="pageViews">
               <p>Likes</p>
-              <span>icon</span>
+              <span><img src="./images/icon-instagram.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
-                5462
+              5462
               </span>
-              <p><span class="positive"></span>2257%</p>
+              <p><span class="positive"><img src="./images/icon-up.svg" alt=""> 2257%</span></p>
             </div>
           </div>
           <div class="stat">
             <div class="pageViews">
               <p>Profile Views</p>
-              <span>icon</span>
+              <span><img src="./images/icon-instagram.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
                 52k
               </span>
-              <p><span class="positive"></span>1375%</p>
+              <p><span class="positive"><img src="./images/icon-up.svg" alt="">1375%</span></p>
             </div>
           </div>
           <div class="stat">
             <div class="pageViews">
               <p>Retweets</p>
-              <span>icon</span>
+              <span><img src="./images/icon-twitter.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
                 117
               </span>
-              <p><span class="positive"></span>303%</p>
+              <p><span class="positive"><img src="./images/icon-up.svg" alt="">303%</span></p>
             </div>
           </div>
           <div class="stat">
             <div class="pageViews">
               <p>Likes</p>
-              <span>icon</span>
+              <span><img src="./images/icon-twitter.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
                 507
               </span>
-              <p><span class="positive"></span>553%</p>
+              <p><span class="positive"><img src="./images/icon-up.svg" alt="">553%</span></p>
             </div>
           </div>
           <div class="stat">
             <div class="pageViews">
               <p>Likes</p>
-              <span>icon</span>
+              <span><img src="./images/icon-youtube.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
                 107
               </span>
-              <p><span class="negative"></span>19%</p>
+              <p><span class="negative"><img src="./images/icon-down.svg" alt="">19%</span></p>
             </div>
           </div>
           <div class="stat">
             <div class="pageViews">
               <p>Total Views</p>
-              <span>icon</span>
+              <span><img src="./images/icon-youtube.svg" alt=""></span>
             </div>
             <div class="percentage">
               <span class="number">
                 1407
               </span>
-              <p><span class="negative"></span>12%</p>
+              <p><span class="negative"><img src="./images/icon-down.svg" alt="">12%</span></p>
             </div>
           </div>
         </div>
