--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Social Media Dashboard</h1>
         <p>Total Followers: 23,004</p>
       </div>
-      <div class="darkMode">
+      <div class="darkModeBox">
         <p>Dark Mode</p>
         <input type="checkbox">
       </div>
