added funcionality to dark mode switch

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="darkModeBox">
         <p>Dark Mode</p>
-        <input type="checkbox">
+        <input id="darkModeSwitch" type="checkbox">
       </div>
     </header>
     <section>
